# poc-font-manager

./: Cargo.toml  README.md
.github/workflows/: linux.yaml  macos.yaml  windows.yaml
src/: font_manager.rs  layouter.rs  lib.rs
src/font_manager/: font_info.rs  manager.rs  sources.rs
src/font_manager/sources/: fontique.rs  fontkit.rs  pango.rs  parley.rs
