[package]
name = "fontmanager"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "display-fonts"
path = "src/bin/display-fonts.rs"

[[bin]]
name = "generate-svg"
path = "src/bin/generate-svg.rs"

[[bin]]
name = "gtk-test"
path = "src/bin/gtk-test.rs"

[dependencies]
colog = "^1.3"
log = "0.4.22"
anyhow = "1.0.95"
prettytable = "0.10.0"
gtk4 = { version = "0.9.5", features = ["v4_6"] }
font-kit = "0.14.2"
cairo-rs = { version = "0.19.4", features = ["use_glib", "freetype"] }
pangocairo = "0.20.7"
freetype-rs = "0.36.0"
