[package]
name = "fontmanager"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "display-fonts"
path = "src/bin/display-fonts.rs"

[[bin]]
name = "generate-svg"
path = "src/bin/generate-svg.rs"

[[bin]]
name = "gtk-test"
path = "src/bin/gtk-test.rs"

[[bin]]
name = "gtk2-test"
path = "src/bin/gtk2-test.rs"

[[bin]]
name = "vello-test"
path = "src/bin/vello-test.rs"

[[bin]]
name = "fm"
path = "src/bin/fm.rs"


[dependencies]
colog = "^1.3"
log = "0.4.22"
anyhow = "1.0.95"
prettytable = "0.10.0"
gtk4 = { version = "0.9.5", features = ["v4_6"] }
font-kit = "0.14.2"
cairo-rs = { version = "0.19.4", features = ["use_glib", "freetype"] }
pangocairo = "0.20.7"
freetype-rs = "0.36.0"
vello = "0.3.0"
winit = "0.30.7"
pollster = "0.4.0"
image = "0.25.5"
parley = "0.2.0"
swash = "0.1.19"
fontique = "0.1.0"