[package]
name = "gosub_fontmanager"
version = "0.1.0"
edition = "2021"
authors = ["Gosub Community <info@gosub.io>"]
description = "Generic font manager"
license = "MIT"

[[bin]]
name = "display-fonts"
path = "src/bin/display-fonts.rs"

[[bin]]
name = "generate-svg"
path = "src/bin/generate-svg.rs"

[[bin]]
name = "gtk-test"
path = "src/bin/gtk-test.rs"

[[bin]]
name = "gtk2-test"
path = "src/bin/gtk2-test.rs"

[[bin]]
name = "vello-test"
path = "src/bin/vello-test.rs"

[features]
default = ["source_fontkit", "source_fontique", "source_pango", "source_parley"]
source_pango = ["dep:pangocairo"]
source_parley = ["dep:parley"]
source_fontique = ["dep:fontique"]
source_fontkit = ["dep:font-kit", "dep:freetype-rs"]

[dependencies]
colog = "^1.3"
log = "0.4.22"
anyhow = "1.0.95"
prettytable = "0.10.0"
gtk4 = { version = "0.9.5", features = ["v4_6"] }
cairo-rs = { version = "0.19.4", features = ["use_glib", "freetype"] }
vello = "0.3.0"
winit = "0.30.7"
pollster = "0.4.0"
image = "0.25.5"
swash = "0.1.19"

font-kit = { version = "0.14.2", optional = true }
pangocairo = { version = "0.20.7", optional = true }
freetype-rs = { version = "0.36.0", optional = true }
fontique = { version = "0.1.0", optional = true }
parley = { version = "0.2.0", optional = true }
